# storage-benchmarking

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.yml  pylintrc  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: docker-publish.yml
job_files/: blocks.ini  blocks_rand.ini  default.ini
src/benchmarking_tool/: celery_app.py  coordinator.py  fio.py  main.py
